Fix weird spacing on /blog

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -112,7 +112,6 @@ html {
     .entry-meta {
       float: right;
       margin-left: $baseline/2;
-      margin-bottom: $baseline;
     }
   }
 
